Started on the attributes example

--- a/examples/AspNetCore.StarWars.CodeFirstAttributes/AspNetCore.StarWars.csproj
+++ b/examples/AspNetCore.StarWars.CodeFirstAttributes/AspNetCore.StarWars.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <IsPackable>false</IsPackable>
-    <LangVersion>7.2</LangVersion>
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
