--- a/src/StrawberryShake/Client/src/Http/StrawberryShake.Http.csproj
+++ b/src/StrawberryShake/Client/src/Http/StrawberryShake.Http.csproj
@@ -1,21 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework Condition="'$(TargetFrameworks)'==''">netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
-
-  <PropertyGroup>
     <PackageId>StrawberryShake.Http</PackageId>
     <AssemblyName>StrawberryShake.Http</AssemblyName>
     <RootNamespace>StrawberryShake.Http</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Threading.Channels" Version="4.7.0" />
+    <PackageReference Include="System.Threading.Channels" Version="$(SystemThreadingChannels)" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\HotChocolate\Language\src\Language\HotChocolate.Language.csproj" />
     <ProjectReference Include="..\Abstractions\StrawberryShake.Abstractions.csproj" />
     <ProjectReference Include="..\Configuration\StrawberryShake.Configuration.csproj" />
     <ProjectReference Include="..\Transport.Abstractions\StrawberryShake.Transport.Abstractions.csproj" />
