--- a/src/StrawberryShake/Client/src/Transport.Abstractions/StrawberryShake.Transport.Abstractions.csproj
+++ b/src/StrawberryShake/Client/src/Transport.Abstractions/StrawberryShake.Transport.Abstractions.csproj
@@ -1,18 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework Condition="'$(TargetFrameworks)'==''">netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
-
-  <PropertyGroup>
     <PackageId>StrawberryShake.Transport.Abstractions</PackageId>
     <AssemblyName>StrawberryShake.Transport.Abstractions</AssemblyName>
     <RootNamespace>StrawberryShake.Transport</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.IO.Pipelines" Version="4.7.0" />
-    <PackageReference Include="System.Text.Json" Version="4.7.0" />
+    <PackageReference Include="System.IO.Pipelines" Version="$(SystemIOPipelines)" />
+    <PackageReference Include="System.Text.Json" Version="$(SystemTextJson)" />
   </ItemGroup>
 
 </Project>
