--- a/src/StrawberryShake/Client/src/Transport.WebSockets/StrawberryShake.Transport.WebSockets.csproj
+++ b/src/StrawberryShake/Client/src/Transport.WebSockets/StrawberryShake.Transport.WebSockets.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <PackageId>StrawberryShake.Transport.WebSockets</PackageId>
     <AssemblyName>StrawberryShake.Transport.WebSockets</AssemblyName>
-    <RootNamespace>StrawberryShake.Transport.WebSockets</RootNamespace>
+    <RootNamespace>StrawberryShake.Transport</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
